fix: 根据终审审计报告修复 19 个问题（13 P1 + 6 P2）
P1 正确性修复：
- COR-1: ProjectionSpec.JoinGroup 条件方法添加 field null 校验（7个方法）
- COR-2: ProjectionSpec 公开方法添加参数 null 校验（6个方法）
- COR-3: JoinGroup 带 Class 参数重载方法添加 null 校验
- COR-4: SubQuerySpec.where(Function) 添加 null 校验
- COR-5: QuerySpec.having 两个重载方法添加 null 校验

P1 安全修复：
- SEC-1: IgnoreSoftDeleteAdvisor AOP 切点收窄至 SoftDeleteJpaRepository+
- SEC-2: LambdaUtils 反射异常添加 --add-opens JVM 参数指引
- SEC-3: SoftDeleteHelper 添加 getter 优先解析，减少反射依赖

P1 性能修复：
- PERF-1: LambdaUtils 缓存添加后台守护线程定期清理机制
- PERF-2: SoftDeleteHelper FIELD_CACHE 改用 ConcurrentReferenceHashMap 弱引用
- PERF-3/4: ProjectionSpec.findPage() 文档说明 JOIN 计数限制

P1 可靠性修复：
- REL-1: UpdateSpec/DeleteSpec.executeLimited 添加悲观锁选项

P2 修复：
- COR-6: MyJpaTemplate.findById 添加 id null 校验
- SEC-6: InClauseBuilder/LambdaUtils 系统属性添加上限验证
- SEC-7: IgnoreSoftDeleteAdvisor hasAnnotation 计算移入 try 块
- MAINT-5: QuerySpec.resolveSimple default 分支添加防御性编程注释
- DATA-1: BaseEntity 审计字段 setter 改为 protected
- PERF-6: InClauseBuilder 批量拆分预分配容量

测试结果：592 tests passed, 0 failures